chapter06_istio/networking/weight-based-routing.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: weight-based-routing
  namespace: handson
  labels:
    content: weight-based-routing
spec:
  hosts:
  - app.vm54.handson.cloudnativedays.jp
  gateways:
  - handson
  http:
  - route:
    - destination:
        host: handson
        port:
          number: 8080
        subset: blue
      weight: 50
    - destination:
        host: handson
        port:
          number: 8080
        subset: yellow
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: weight-based-routing
  namespace: handson
spec:
  host: handson
  subsets:
  - name: blue
    labels:
      color: blue
  - name: yellow
    labels:
      color: yellow
